# discord-presence

./: Cargo.toml  flake.nix
modules/: default.nix  devShells.nix
modules/pkgs/: default.nix  discord-presence.nix
src/: activity.rs  main.rs  presence.rs  settings.rs  tray.rs
src/app/: message.rs  mod.rs  update.rs  view.rs
