[package]
name = "discord-presence"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
dark-light = "2.0.0"
discord-rich-presence = {git = "https://github.com/Tofixrs/discord-rpc", branch="sanity"}
iced = { version = "0.13.1", features = ["auto-detect-theme"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
