[package]
name = "discord-presence"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
dark-light = "2.0.0"
discord-rich-presence = {git = "https://github.com/Tofixrs/discord-rpc", branch="sanity"}
gtk = "0.18.2"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["auto-detect-theme"] }
image = "0.25.6"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
tray-icon = "0.21.1"

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw.git"
features = ["date_picker", "number_input", "selection_list", "time_picker", "menu"]

[patch.crates-io]
iced_widget = {git = "https://github.com/iced-rs/iced.git"}
iced_core = {git = "https://github.com/iced-rs/iced.git"}
iced = { git = "https://github.com/iced-rs/iced.git" }

